# ovirt-node-plugin-foreman

./: .gitignore  README.md  configure.ac  ovirt-node-plugin-foreman.spec.in
aux/: make-el6-srpm  make-el7-srpm  scratchbuild
aux/vagrant-build/: Vagrantfile  build_image.sh
recipe/: foreman-plugin-minimizer.ks
src/: Makefile.am  discover-host  discover-host.rb.in  discover-host.service  discovery-facts.rb.in  enable-ssh  network-dynamic
